# instabot

./: .gitignore  Dockerfile  docker-compose.yml  insta-bot.py  pyproject.toml  rivals.txt  waiter.py
.devcontainer/: devcontainer.json
